Fixed tabs not working correctly on small displays

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ div{
 }
 
 #popupdiv{
+  display: "none";
   margin: auto;
   position: absolute;
   left: 30%;
